2009-01-17  Jon Nettleton  <jon.nettleton@gmail.com>

	* configure.ac:
	* src/via_accel.c: (viaInitAccel), (viaExitAccel),
	(viaFinishInitAccel):
	* src/via_driver.c: (VIASetup), (VIASetupDefaultOptions),
	(VIAPreInit), (VIAWriteMode), (VIAInitialize3DEngine):
	* src/via_driver.h:
	* src/via_memory.c: (viaExaFBSave), (VIAFreeLinear),
	(viaOffScreenLinear), (VIAInitLinear):
	* src/via_priv.h:

	Patch submitted by Robert Bridge, originally started by
	Xavier Bachelot, to remove old EXA support.  We are moving
	forward with the driver and are no longer supporting the
	old EXA initializations.	

2009-01-14  Jon Nettleton  <jon.nettleton@gmail.com>

	* src/via_accel.c: (viaDisableVQ), (viaInitialize2DEngine),
	(viaAccelSync):

	According to VIA's code the P4M900 should have the same
	acceleration initialization registers as the K8M890.  This
	patch fixes this and gives about a 10x increase in the 
	video benchmark numbers.

2009-01-14  Jon Nettleton  <jon.nettletno@gmail.com>

	* src/via_accel.c: (viaFlushPCI):

	remove the check for VIA_3D_ENG_BUSY in the idle loop.
	This causes xorg to chew a bit more cpu with XAA enabled,
	and it causes the entire X server to dump if EXA is enabled.
	I should investigate further, but for now I will just remove
	it.

2009-01-14  Jon Nettleton  <jon.nettleton@gmail.com>

	* src/via_accel.c: (viaFlushPCI):

	Oops forgot to change registers for the vx800 chipset
	when waiting for Idle in the engines.  I also added
	back in waiting for the 3d engine to be idle.  I am
	not sure if this was removed for a reason.

2009-01-07  Jon Nettleton <jon.nettleton@gmail.com>

	* src/via_bios.h:
	* src/via_crtc.c: (via_xf86crtc_resize), (ViaPreInitCRTCConfig):
	* src/via_driver.c: (VIAPreInit):

	Temporary hack to fix a bug with newer Xorg and DRI
	that crashes if CRTC is not setup.  I am adding this
	because I am working on this part of the code anyways
	so it won't get lost in bit rot.

2009-01-06  Jon Nettleton  <jon.nettleton@gmail.com>
