@@ -276,8 +276,8 @@ viaDMAInitTimeStamp(XvMCLowLevel * xl)
 	xl->tsMem.context = *(xl->drmcontext);
 	xl->tsMem.size = 64;
 	xl->tsMem.type = VIA_MEM_VIDEO;
-	if (drmCommandWriteRead(xl->fd, DRM_VIA_ALLOCMEM, &xl->tsMem,
-		sizeof(xl->tsMem)) < 0)
+	if ((ret = drmCommandWriteRead(xl->fd, DRM_VIA_ALLOCMEM, &xl->tsMem,
+		sizeof(xl->tsMem))) < 0)
 	    return ret;
 	if (xl->tsMem.size != 64)
 	    return -1;
